[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tai Lucas <tglucas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
app = "app.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
influxdb-client = "^1.36.0"
libscrc = "^1.8.1"
paho-mqtt = "^1.6.1"
requests = "^2.28.2"
tailucas-pylib = "^0.4.2"
sentry-sdk = "^2.10.0"
onepasswordconnectsdk = "^1.5.1"
prometheus-client = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
